# nashpobench2real-api

./: .gitignore  LICENSE  README.md  pyproject.toml
bench_algos/: random_search.py  random_search_mo.py  rea.py  reinforce.py  shemoa.py
src/nashpobench2api/: api.py  download.py
